# magic

./: .gitignore  Cargo.toml  README.md  Rocket.toml
resources/: card_sets_inserts.txt  mtg_card_sets.txt  parse_sets.py
src/: main.rs  sql.rs
static/: database.css  input.css  input.js  layout.css
templates/: database.html.tera  decks.html.tera  index.html.tera  input.html.tera  layout.html.tera  receive.html.tera  user.html.tera
