[package]
name = "magic"
version = "0.1.0"
authors = ["ecnavda"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates", "serve"]

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]

[dependencies.serde]
version = "1.0"
features = ["derive"]